--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,12 @@ moviepy<2
 imageio>=2.26
 imageio-ffmpeg>=0.6.0
 tqdm>=4.66
-librosa==0.10.1
 pillow>=9
+
+# Audio / DSP
+librosa==0.10.1
 scipy>=1.8,<2.1
+
+# GUI
+PySide6>=6.9,<6.10
+pyqtdarktheme>=2.0
